# Yolo

./: .gitignore  CMakeLists.txt  README.md
include/core/: DynamicObjectManager.h  Game.h  GameInit.h  Interactable.h  InteractableObject.h  NPCManager.h
include/entities/: Dog.h  FlowerPatch.h  NPC.h  Player.h
include/graphics/: Camera.h  Renderer.h  TextRenderer.h  WorldRenderer.h
include/input/: InputManager.h
include/systems/: FarmingSystem.h  PotterySystem.h
include/ui/: DialogueSystem.h
src/: main.cpp
src/core/: DynamicObjectManager.cpp  Game.cpp  GameInit.cpp  InteractableObject.cpp  NPCManager.cpp
src/entities/: Dog.cpp  FlowerPatch.cpp  NPC.cpp  Player.cpp
src/graphics/: Camera.cpp  Renderer.cpp  TextRenderer.cpp
src/input/: InputManager.cpp
src/systems/: FarmingSystem.cpp  PotterySystem.cpp
src/ui/: DialogueSystem.cpp
